--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/toddtreece/osc-examples",
   "dependencies": {
-    "osc-min": "^0.2.0"
+    "osc-min": "^0.2.0",
+    "socket.io": "^1.3.5"
   }
 }
