--- a/pitft/package.json
+++ b/pitft/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/toddtreece/osc-examples/issues"
   },
-  "homepage": "https://github.com/toddtreece/osc-examples"
+  "homepage": "https://github.com/toddtreece/osc-examples",
+  "dependencies": {
+    "osc-min": "^0.2.0",
+    "pitft": "git://github.com/toddtreece/node-pitft",
+    "pitft-touch": "git://github.com/toddtreece/node-pitft-touch#tslib"
+  }
 }
